[tool.poetry]
name = "metastats"
version = "0.1.0"
description = ""
authors = ["Jiří Tumpach <tumpji@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
